# SMM_NQ_Trader

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
accounts/: accounts.yaml
config/: config.yaml  strategy_config.yaml
core/: account_sync_manager.py  bar_features.py  bars.py  buffers.py  external_signal_processor.py  features.py  signals.py  symbols.py
core/smm/: __init__.py  combined.py  common.py  dashboard.py  enhanced.py  main.py
docker/: Dockerfile.dashboard  Dockerfile.trader
docs/: BAR_BASED_SIGNALS.md  ENHANCED_STRATEGY.md  LIVE_DATA_SETUP.md  NINJATRADER_INTEGRATION.md  SIGNAL_CALCULATION.md  SMM_EMA55_UPDATE.md  TESTING_SUMMARY.md
exec/: enhanced_executor.py  executor.py  reconciler.py
ninjatrader/: SMMSignalIndicator.cs
rithmic/: client.py
scripts/: live_monitor.py  live_tail.sh  orders_audit.py  pnl_count.py  pnl_snapshot.py  pnl_stream_probe.py  session_summary.sh  start_external_signal_processor.py  strategy_monitor.py  submit_single_test_order.py  submit_test_order.py
storage/: replay.py
tests/: debug_signal_logic.py  run_all_tests.py  test_bar_compatibility.py  test_bars_tbars.py  test_env_threshold.py  test_features.py  test_indicators.py  test_signal_generation.py  test_smm_combined.py  test_smm_extended.py  test_smm_integration.py  test_smm_main.py  test_symbols.py
web/: server.py
